--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cosmos</title>
 </head>
 <body>
     <div id = 'main'>
-        <h1>Тут скоро будет космос</h1>
+        <h1>Тут скоро будут планеты</h1>
     </div>
+    <style></style>
     
 </body>
 </html>
