--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cosmos</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Космический фон</title>
+<link rel="stylesheet" href="style.css">
+<script src="script.js"></script>
+
 </head>
 <body>
-    <div id = 'main'>
-        <h1>Тут скоро будут планеты</h1>
-    </div>
-    <style></style>
-    
+<section class="wrapper">
+        <div id="stars"></div>
+        <div id="stars2"></div>
+        <div id="stars3"></div>
+</section>
+
 </body>
 </html>
