--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Космический фон</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet"  href="style.css">
 <script src="script.js"></script>
 
 </head>
 <body>
 <section class="wrapper">
         <div id="stars"></div>
+        <div class="knopki">
+                    <button class="knopka">Перейти к планетам</button>
+                    <button class="knopka1">Настройки</button>
+                    <button class="knopka2">Разработчики</button>
+        </div>
+
         <div id="stars2"></div>
         <div id="stars3"></div>
 </section>
