--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Космический фон</title>
 <link rel="stylesheet"  href="style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="script.js"></script>
 
 </head>
@@ -12,7 +13,7 @@
 <section class="wrapper">
         <div id="stars"></div>
         <div class="knopki">
-                    <button class="knopka">Перейти к планетам</button>
+                    <button class="knopka" onclick="window.location.href='planeti.html'">Перейти к планетам</button>
                     <button class="knopka1">Настройки</button>
                     <button class="knopka2">Разработчики</button>
         </div>
