--- a/planeti.html
+++ b/planeti.html
@@ -11,33 +11,38 @@
 
 </head>
   <body>
+    <div class="correct">
         <div class="solar-system">
-    <div id="sun"></div>
+            <div id="sun"></div>
 
-    <div class="orbit mercury-orbit"></div>
-    <div class="mercury-spin">
-        <div id="mercury"></div>
-    </div>
+            <div class="orbit mercury-orbit"></div>
+            <div class="mercury-spin">
+                <!-- Заменяем DIV на изображение планеты Меркурий -->
+                <img id="mercury" src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Mercury_in_true_color.jpg" />
+            </div>
 
-    <div class="orbit venus-orbit"></div>
-    <div class="venus-spin">
-        <div id="venus"></div>
-    </div>
+            <div class="orbit venus-orbit"></div>
+            <div class="venus-spin">
+                <!-- Заменяем DIV на изображение Венеры -->
+                <img id="venus" src="https://upload.wikimedia.org/wikipedia/commons/8/87/Venus_from_Mariner_10.jpg" />
+            </div>
 
-    <div class="orbit earth-orbit"></div>
-    <div class="earth-spin">
-        <div class="orbit moon-orbit"></div>
-        <div class="moon-spin">
-        <div id="moon"></div>
+            <div class="orbit earth-orbit"></div>
+            <div class="earth-spin">
+                <!-- Заменяем DIV на изображение Земли -->
+                <img id="earth" src="https://raw.githubusercontent.com/everdimension-personal/codepen-assets/master/earth_small_150.jpg" />
+                <div class="orbit moon-orbit"></div>
+                <div class="moon-spin">
+                    <div id="moon"></div>
+                </div>
+            </div>
+
+            <div class="orbit mars-orbit"></div>
+            <div class="mars-spin">
+                <!-- Заменяем DIV на изображение Марса -->
+                <img id="mars" src="https://upload.wikimedia.org/wikipedia/commons/0/02/OSIRIS_Mars_true_color.jpg" />
+            </div>
         </div>
-
-        <img id="earth" src="https://raw.githubusercontent.com/everdimension-personal/codepen-assets/master/earth_small_150.jpg" />
     </div>
-
-    <div class="orbit mars-orbit"></div>
-    <div class="mars-spin">
-        <div id="mars"></div>
-    </div>
-    </div>
-  </body>
+</body>
 </html>
