--- a/planeti.html
+++ b/planeti.html
@@ -24,7 +24,7 @@
             <div class="orbit venus-orbit"></div>
             <div class="venus-spin">
                 <!-- Заменяем DIV на изображение Венеры -->
-                <img id="venus" src="https://upload.wikimedia.org/wikipedia/commons/8/87/Venus_from_Mariner_10.jpg" />
+                <img id="venus" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/85/Venus_globe.jpg/960px-Venus_globe.jpg?20190107164518" />
             </div>
 
             <div class="orbit earth-orbit"></div>
